--- a/mentor/package.json
+++ b/mentor/package.json
@@ -20,10 +20,15 @@
     "@angular/router": "^18.2.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@popperjs/core": "^2.11.8",
+    "@types/leaflet": "^1.9.14",
     "autoprefixer": "^10.4.20",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.5",
+    "cookie": "^0.7.2",
+    "http-proxy-middleware": "^3.0.3",
+    "ionicons": "^7.4.0",
+    "leaflet": "^1.9.4",
     "ngxtension": "^4.0.0",
     "postcss": "^8.4.47",
     "rxjs": "~7.8.0",
