--- a/mentor/package.json
+++ b/mentor/package.json
@@ -26,6 +26,7 @@
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.5",
     "cookie": "^0.7.2",
+    "express": "^4.21.1",
     "http-proxy-middleware": "^3.0.3",
     "ionicons": "^7.4.0",
     "leaflet": "^1.9.4",
