--- a/mentor/package.json
+++ b/mentor/package.json
@@ -27,6 +27,7 @@
     "chart.js": "^4.4.5",
     "cookie": "^0.7.2",
     "express": "^4.21.1",
+    "firebase": "^11.0.2",
     "http-proxy-middleware": "^3.0.3",
     "ionicons": "^7.4.0",
     "leaflet": "^1.9.4",
